Fix: Sordish overview section

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <h2>About Sordish</h2>
                     <div class="language-info">
                         <h3>Overview</h3>
-                        <p>Sordish is characterized by flowing consonants and melodic vowel combinations. The language emphasizes harmony with nature and spiritual connection.</p>
+                        <p>Sordish is a Merkopan language, serving as the official and primary language of the Republic of Sordland, as well as the former Kingdom of Sordland and Renan Aristocracy. It is widely spoken by the Sordish people and the Agno-Sordish community. The language shares notable similarities with Old Valgish.</p>
                     </div>
                     <div class="language-info">
                         <h3>History</h3>
